data/derived/comb/progs/unify/prog4738.ml.out
Characters 49-54:
  let f x = b, (f b) in (b = (f b)) in 
                             ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
